# shift-schedule-sync

./: .gitignore  main.py  pyproject.toml
apps/analytics/: models.py
apps/analytics/migrations/: 0001_initial.py  0002_initial.py
apps/audit/: models.py
apps/audit/migrations/: 0001_initial.py  0002_initial.py
apps/availability/: models.py
apps/availability/migrations/: 0001_initial.py  0002_initial.py  0003_availabilityexception_is_full_day.py
apps/core/models/: base.py
apps/locations/: models.py  urls.py  views.py
apps/locations/migrations/: 0001_initial.py  0002_initial.py  0003_userlocation_created_at_userlocation_is_deleted_and_more.py
apps/notifications/: models.py
apps/notifications/migrations/: 0001_initial.py  0002_initial.py
apps/realtime/: consumers.py  routing.py
apps/realtime/services/: shift_events.py
apps/schedules/: models.py  urls.py  views.py
apps/schedules/migrations/: 0001_initial.py  0002_initial.py  0003_shift_is_deleted_shiftassignment_is_deleted.py  0004_alter_shiftassignment_user.py
apps/schedules/serializers/: schedule_serializer.py  shift_serializer.py
apps/shift/: urls.py  views.py
apps/swaps/: apps.py  models.py  urls.py  views.py
apps/swaps/migrations/: 0001_initial.py  0002_initial.py
apps/swaps/tasks/: shift_tasks.py
apps/users/: admin.py  models.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_skill_alter_customuser_options_customuser_created_at_and_more.py
apps/worklogs/: apps.py  models.py
config/: asgi.py  settings_old.py  urls.py
config/settings/: base.py  dev.py  prod.py
(+6 files in other folders)
